--- a/rottenMovies/src/main/resources/templates/header.html
+++ b/rottenMovies/src/main/resources/templates/header.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="https://thymleaf.org">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
   <header th:fragment="html_header">
     <div class="collapse bg-dark" id="navbarHeader">
       <div class="container">
@@ -11,8 +13,8 @@
           <div class="col-sm-4 offset-md-1 py-4">
             <h4 class="text-white">Links</h4>
             <ul class="list-unstyled">
-              <li><a href="/login" class="text-white">Login</a></li>
-              <li><a href="/" class="text-white">Home</a></li>
+              <li th:unless="${credentials}"><a href="/login" class="text-white">Login</a></li>
+              <li><a href="/" class="text-white">Index</a></li>
               <div th:if="${credentials}">
                 <li th:if="${credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO'}"><a th:href="'/admin-panel'">Admin panel</a></li>
                 <li><a href="/logout" class="text-white">Logout</a></li>
@@ -35,7 +37,7 @@
                 </div>
               </div>
             </div>
-            <div class="dropdown">
+            <div class="dropdown mt-2">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Hall of Fame
               </button>
