--- a/rottenMovies/src/main/resources/templates/registerTopCritic.html
+++ b/rottenMovies/src/main/resources/templates/registerTopCritic.html
@@ -5,47 +5,17 @@
     <title>rottenMovies</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/signin.css">
+    <link rel="stylesheet" href="/css/signin.css">
 </head>
 <body>
-<header>
-    <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <h4 class="text-white">Explore</h4>
-                    <p class="text-muted">Explore our vast catalogue of movies and leave a review</p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <h4 class="text-white">Links</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="/login" class="text-white">Login</a></li>
-                        <li><a href="/" class="text-white">Home</a></li>
-                        <li th:if="${credentials}" th:text="|Hi ${credentials.username}|"></li>
-                        <li><a href="/logout" class="text-white">Logout</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container">
-            <a href="/" class="navbar-brand d-flex align-items-center">
-                <img class="me-2" src="/images/icon.png" width="30" height="30">
-                <strong>rotten Movies</strong>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </div>
-</header>
+<header th:replace="header :: html_header"></header>
+
 <div id="content" class="text-center">
-    <script th:if="${credentials}">window.location.assign("/movie");</script>
-        <main class="form-signin w-100 m-auto">
-            <form method="post">
-            <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-            <h1 class="h3 mb-3 fw-normal">Top Critic creation</h1>
+    <script th:unless="${credentials}?${credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO'}:false">window.location.assign("/index");</script>
+    <main class="form-signin w-100 m-auto">
+        <form method="post">
+            <img class="mb-4" src="/images/logo.png" alt="" width="72" height="100">
+            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
             <div class="form-floating">
                 <input type="text" class="form-control" id="floatingFirstName" placeholder="first name" name="first_name" required autofocus>
@@ -70,28 +40,28 @@
             <div class="form-floating">
                 <input type="hidden" class="form-control" id="floatingis_top_critic" placeholder="is_top_critic" name="is_top_critic" value="is_top_critic">
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
+            <button class="w-100 btn btn-lg btn-primary my-4" type="submit">Register</button>
             <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
-            </form>
-            <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
-                A simple danger alert—check it out!
-            </div>
-            <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
-                A simple info alert—check it out!
-            </div>
-            <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
-                A simple success alert—check it out!
-            </div>
+        </form>
+        <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
+            A simple danger alert—check it out!
+        </div>
+        <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
+            A simple info alert—check it out!
+        </div>
+        <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
+            A simple success alert—check it out!
+        </div>
 
-        </main>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-    </script>
+    </main>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+</script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-            integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+</script>
 
 </body>
 </html>
