add registerTopCritic link in admin-panel side navbar

--- a/rottenMovies/src/main/resources/templates/admin-panel.html
+++ b/rottenMovies/src/main/resources/templates/admin-panel.html
@@ -15,20 +15,22 @@
               <ul class="nav flex-column">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" th:href="'/admin-panel/populationByGeneration'">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home align-text-bottom" aria-hidden="true"></svg>
                     View age population
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/admin-panel/mostReviewUser">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file align-text-bottom" aria-hidden="true"></svg>
                     User with most review
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/admin-panel/mostFollowTopCritic">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart align-text-bottom" aria-hidden="true"></svg>
                     Most followed Critics
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/admin-panel/registerTopCritic">
+                    Register new Top Critic
                   </a>
                 </li>
 
